Increases size of drink name

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -8,6 +8,10 @@ body {
   background: whitesmoke;
 }
 
+.drinkname {
+  font-size: 32px;
+}
+
 .drinkpicture {
   display: inline;
   max-width:230px;
