--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -2,18 +2,29 @@ body {
   background-color: white;
 }
 
-
+.title {
+  font-size: 22px;
+}
+.ingredient-field {
+  height:40px;
+}
 .drink {
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   border: 1px solid lightgrey;
   background: whitesmoke;
 }
 
 .drinkname {
-  font-size: 32px;
+  font-size: 24px;
 }
 
+.display-ingredients {
+  display: block;
+  font-size: 24px;
+}
 .drinkpicture {
   display: inline;
   max-height:95px;
@@ -28,6 +39,7 @@ body {
 .x {
   color: red;
   opacity: .3;
+  font-size:18px;
 }
 
 .x:hover {
